create selection screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".Admin_Home"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Login_Admin" />
     </application>
 
 </manifest>
