link button to public use

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".Login_Admin" />
         <activity android:name=".Login_ShopRetailer" />
+        <activity android:name=".Public_use" />
     </application>
 
 </manifest>
