--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,11 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Admin_Home"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".Admin_Home"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Login_Admin" />
         <activity android:name=".Login_ShopRetailer" />
-        <activity android:name=".Public_use" />
+        <activity
+            android:name=".Public_use"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
