--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,17 +21,27 @@
         <activity
             android:name=".Admin.Admin_Home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Admin.Login_Admin"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".Admin.Login_Admin"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".StoreRetailer.Login_ShopRetailer"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Public_use"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".StoreRetailer.Shop_Retailer_Promotion_Event" />
-        <activity android:name=".Admin.AdminConfirmation"
-            android:label=""/>
+        <activity android:name=".StoreRetailer.Shop_Retailer_Promotion_Event"
+            android:label="Promotion and Event"
+            android:noHistory="true"/>
+        <activity
+            android:name=".Admin.AdminConfirmation"
+            android:label="" />
+        <activity
+            android:name=".PublicMain"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Public.EventDescription"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
