--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    allprojects {
+        repositories {
+            maven { url "https://jitpack.io" }
+        }
+    }
 }
 
 dependencies {
@@ -40,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.1'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
